# beascout

./: .gitignore  .pylintrc  ARCHITECTURE.md  BUG_REPORT_DISCARD_REGRESSIONS.md  CLAUDE.md  COLLABORATION_LESSONS.md  COLLABORATION_LOG.md  DEFECT_QUALITY_PERSONAL_EMAIL.md  ENHANCEMENT_VERSIONING_SYSTEM.md  ENHANCEMENT_WEBSITE_VALIDATION.md  KEY_THREE_ANONYMIZATION_WORKFLOW.md  LICENSE  OPERATIONAL_WORKFLOW.md  PRODUCTION_STATUS.md  README.md  REGRESSION_TEST_PIPELINE.md  REQUIREMENTS.md  SESSION_HANDOFF.md  SYSTEM_DESIGN.md  WEEKLY_REPORT_WORKFLOW.md  analyze_data.py  beascout.code-workspace  ongoing_design_discussion.txt  pyproject.toml  pytest.ini  requirements.txt  test_scraper.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement.md
GITHUB_ISSUES/: ISSUE_commissioner_report_comparison.md  ISSUE_discard_regressions.md  ISSUE_meeting_time_validation.md  ISSUE_personal_email_detection.md  ISSUE_pobox_detection.md  ISSUE_versioning_system.md  ISSUE_website_validation.md
GITHUB_ISSUES/initial_reports/: DEFECT_QUALITY_POBOX_LOCATION.md
archive/: html_extractor.py  scraped_data_parser.py  verify_key_three_contacts.py
archive/prototype/: check_duplicates.py  conservative_multi_zip_scraper.py
data/analysis/: CODING_GUIDELINES_ANALYSIS.md  CODING_GUIDELINES_IMPLEMENTATION_PLAN.md  SCRAPING_REGRESSION_TEST_SOLUTIONS.md  beascout_pipeline_guidance.md  comprehensive_regression_testing_plan.md  legacy_directory_assessment.md  pipeline_duplication_analysis.md  regression_testing_plan.md  version_suffix_analysis.md
data/config/: excluded_units.json
data/debug/: discarded_orgs.txt  extract_fail_org.txt  feedback_01Sep2025.md  notes.md  quality_debug_20250828_074611.xlsx  quality_debug_20250828_085755_u.xlsx
data/feedback/: BeAScout_Pipeline_Manager.md  BeAScout_Quality_Analyzer.md  HNE_Commissioner_Data_Quality_Report_20250825_205749_comments.xlsx  HNE_Commissioner_Data_Quality_Report_20250830_161520_iwolf.xlsx  HNE_Council_BeAScout_Report_20250825_example.xlsx  HNE_Council_BeAScout_Report_20250825_feedback.xlsx  Rethinking_Processing.md  TOWN_TO_DISTRICT.txt  all_units_01720_scored_comments.md  all_units_01720_scored_comments.txt  anonymized_key_three.json.diff  dashboard_technology_proposal.md  data_restructuring_feedback.md  development_workflow.md  discarded_units_error.md  district_mapping_iwolf.py  district_towns.md  documentation_feedback.md  emails_feedback.md  excel_feedback_1.md  excel_headers.md  immediate_next_steps.md  immediate_next_steps_plan.md  issues_08Sep2025.md  jefferson_fiskdale.md  joinexploring_discussion_1.md  key_three_email_guidelines.md  key_three_unit_analysis.md  legacy_debug.md  letter_grade_removal.md  lost_fixes.md  meeting_address_processing_order.md  missing_beascout.txt  missing_beascout_2.txt  missing_beascout_summary.txt  missing_beascout_unit_email.md  missing_description.md  next_steps_24Aug2025.md  pipeline.md  post_2012_holden.json  (+23 more)
data/input/: HNE_key_three.json  HNE_units.txt  Key 3 08-22-2025.json  Key_3_08-22-2025.csv  Key_3_08-22-2025_clean.csv  Key_3_08-22-2025_original.xlsx  Key_3_08-22-2025_original_cleaned.txt  Key_Three_units_by_org.txt  beascout_01720_manual.html  joinexploring_01720_manual.html
data/output/: enhanced_three_way_validation_results.json  sample_key_three_email.md  sample_key_three_email_worst_case.md  test_pack1_email_with_key_three.md
data/raw/: all_units_01005_processed.json  all_units_01005_scored.json  (+166 more)
docs/: BeAScout_Roundtable_Presentation_10Nov2025.pptx  BeAScout_Roundtable_Presentation_13Oct2025.pptx
prototype/: analyze_data.py  examine_descriptions.py  extract_all_units.py  extract_hne_towns.py  improved_meeting_extraction.py  multi_town_deduplication.py  test_extraction_approaches.py
reports/: HNE_Council_BeAScout_Report_20250830_142625.xlsx
scripts/: analyze_identifier_matching.py  analyze_missing_units.py  convert_key_three_to_json.py  create_authoritative_dataset.py  create_complete_dataset.py  debug_key_three_matching.py  email_analysis.py  filter_hne_units.py  find_units_without_description.py  generate_district_reports.py  generate_key_three_emails.py  generate_test_report.py  parse_key_three_database.py  process_full_dataset.py  search_strings.py  test_key_three_debug.py  test_quality_debug.py
src/: __init__.py
tests/: README.md  acceptance_tests.py  conftest.py  run_regression_tests.py  verify_all.py
(+2332 files in other folders)
